--- a/app/templates/partials/top_questions.html
+++ b/app/templates/partials/top_questions.html
@@ -1,6 +1,6 @@
 <!-- templates/partials/top_questions.html -->
-<aside class="lg:w-1/4">
-    <div class="bg-white rounded-xl shadow-sm p-6 sticky top-28">
+<aside class="lg:w-1/4 mt-6 lg:mt-0">
+    <div class="bg-white rounded-xl shadow-sm p-6 lg:sticky lg:top-28">
         <h2 class="text-xl font-bold text-gray-800 mb-6 flex items-center">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-500" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
