--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Inter', sans-serif;
-    background-color:rgb(245, 245, 245); 
+    background-color:rgb(245, 245, 245);  
 }
 .header-glass {
     backdrop-filter: blur(10px);
@@ -18,4 +18,17 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+}
+.horizontal-scroll {
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    padding-bottom: 1rem;
+}
+.horizontal-scroll::-webkit-scrollbar {
+    height: 6px;
+}
+.horizontal-scroll::-webkit-scrollbar-thumb {
+    background: #cbd5e1;
+    border-radius: 3px;
 }
