--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,25 +7,9 @@
     <title>О нас - Cleverly</title>
     <script src="https://cdn.tailwindcss.com"></script> 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color:rgb(245, 245, 245); 
-        }
-        .header-glass {
-            backdrop-filter: blur(10px);
-            background-color: rgba(255, 255, 255, 0.85);
-        }
-        .gradient-text {
-            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', path='css/about.css') }}">
 </head>
 <body class="min-h-screen flex flex-col pb-20 pt-5">
-
     <!-- Header -->
     {% include "partials/header.html" %}
 
