--- a/app/templates/page404.html
+++ b/app/templates/page404.html
@@ -7,30 +7,7 @@
     <title>404 - Страница не найдена | Cleverly</title>
     <script src="https://cdn.tailwindcss.com"></script> 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color:rgb(245, 245, 245); 
-        }
-        .header-glass, .footer-glass {
-            backdrop-filter: blur(10px);
-            background-color: rgba(255, 255, 255, 0.85);
-        }
-        .gradient-text {
-            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-        .animate-bounce-slow {
-            animation: bounce 4s infinite;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', path='css/page404.css') }}">
 </head>
 <body class="min-h-screen flex flex-col">
 
