--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -30,7 +30,7 @@
                     <div class="mt-3 flex flex-wrap gap-2">
                         {% for tag in question.tags %}
                         {% if tag != '' %}
-                        <a href="#" class="px-3 py-1 bg-gray-300 text-gray-800 rounded-full text-sm hover:bg-indigo-100 hover:text-indigo-600 transition">{{ tag }}</a>
+                        <a href="/tag/{{ tag|urlencode }}" class="px-3 py-1 bg-gray-300 text-gray-800 rounded-full text-sm hover:bg-indigo-100 hover:text-indigo-600 transition">{{ tag }}</a>
                         {% endif %}
                         {% endfor %}
                     </div>
