--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -37,7 +37,7 @@
             {% else %}
                 <script async src="https://telegram.org/js/telegram-widget.js?22"
                     data-telegram-login="{{ bot_username }}"
-                    data-size="large"
+                    data-size="medium"
                     data-userpic="false"
                     data-auth-url="/auth/telegram"
                     data-request-access="write">
